@@ -64,6 +64,10 @@ debhelper (11.3) UNRELEASED; urgency=medium
     accepts --sourcedir to overrule the default source directory (just
     like e.g. dh_install).  Thanks to Robert Luberda for the suggestion.
     (Closes: #816332)
+  * Buildsystem.pm: Move code from Dh_Buildsystems.pm to Buildsystem.pm
+    to make the latter independent of the former.  This makes it possible
+    to load Buildsystem.pm without debian/control being present.  Thanks
+    to Andreas Tille for the bug report.  (Closes: #897026)
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
